# datadiff

./: Cargo.toml  Changes.md  README.md  sonar-project.properties  style.css  test_file.txt
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  rust.yml
benches/: benches.rs
dtfterminal/: Cargo.toml
dtfterminal/src/: main.rs
libdtf/src/: compare_field.rs  diff_types.rs  lib.rs
src/: .main.rs.rustfmt  app.rs  array_table.rs  dtfterminal_types.rs  file_handler.rs  html_renderer.rs  json_app.rs  key_table.rs  lib.rs  main.rs  type_table.rs  utils.rs  value_table.rs  yaml_app.rs
test_data/: large1.json  person2.json  person3.json  person4.json
test_data/json/: large2.json  person1.json  person3.json  person4.json
test_data/yaml/: person1.yaml  person2.yaml  person4.yml
