[package]
name = "dtfterminal"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libdtf = { git = "https://github.com/Rrayor/libdtf.git", branch = "main" }
term-table = "1.3.2"
colored = "2.0.0"
clap = { version = "4.2.4", features = ["derive"] }
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
